[package]
name = "rosie-sys"
version = "0.1.0"
edition = "2018"
authors = ["Luke Peterson <luke@infoplatter.com>"]
license = "MIT OR Apache-2.0"
links = "rosie"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.103"
mlua = { version = "0.6.4", features = [ "lua53", "vendored" ] }

[build-dependencies]
cc = "1.0.18"
pkg-config = "0.3.9"
