[package]
name = "rosie-sys"
version = "0.1.0"
edition = "2018"
authors = ["Luke Peterson <luke@infoplatter.com>"]
license = "MIT OR Apache-2.0"
links = "rosie"
build = "build.rs"

[dependencies]
libc = "0.2.103"
mlua = { version = "0.6.6", features = [ "lua53", "vendored" ], optional = true }

[build-dependencies]
cc = "1.0.18"
pkg-config = { version = "0.3.9", optional = true }

[features]
link_shared_librosie = ["pkg-config"]
build_static_librosie = ["mlua"]
