[package]
name = "rosie-sys"
version = "1.3.0"
edition = "2018"
authors = ["Luke Peterson <luke@infoplatter.com>"]
license = "MIT OR Apache-2.0"
description = "A crate to build or link to librosie to access the Rosie Pattern Language"
repository = "https://github.com/luketpeterson/rosie-sys/"
readme = "README.md"
homepage = "https://rosie-lang.org/about/"
keywords = ["rosie", "pattern", "matching", "FSA", "regex"]
categories = ["text-processing", "encoding", "parsing"]
links = "rosie"
build = "build.rs"

[dependencies]
libc = "0.2.103"
mlua = { version = "0.6.6", features = [ "lua53", "vendored" ], optional = true }

[build-dependencies]
cc = "1.0.18"
pkg-config = { version = "0.3.9", optional = true }

[features]
link_shared_librosie = ["pkg-config"]
build_static_librosie = ["mlua"]
